fix missing gap between collapsed fieldset, re #9611, re #9706

--- a/resources/assets/stylesheets/less/forms.less
+++ b/resources/assets/stylesheets/less/forms.less
@@ -154,7 +154,7 @@ form.default {
 
         // Insert invisible element that corrects double padding/margin at the
         // bottom
-        &::after {
+        &:not(.collapsed)::after {
             content: '';
             display: block;
             margin-top: -@gap;
